--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <header>
-    <img src="n1.PNG" class="banner">
+    <img src="n1.png" class="banner">
   </header>
 
   <div class="container">
